Fixing the video and navbar overlapping with elements issue

--- a/styles/font.css
+++ b/styles/font.css
@@ -1,7 +1,11 @@
 body{
-    font-family: "Oswald", serif;
+  font-family: "Oswald", serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  height: 200vh;
+  /* background-color: #232323; */
+  height: 300vh;
+}
+html{
+  margin-top: -5px;
 }
