--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -3,14 +3,21 @@
     box-sizing: border-box;
 }
 
-nav {
+.navbar{
     position: sticky;
     top: 10px;
+    z-index: 10;
+}
+nav {
+    position: fixed;
+    top: 5px;
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     justify-content: space-around;
     align-items: flex-start;
     padding: 3px;
-    width: 98vw;
+    width: 95vw;
     z-index: 2;
     color:white;
     margin: 5px auto;
@@ -22,7 +29,7 @@ nav {
 }
 
 nav.bck {
-    background-color: black;
+    background-color: #181818;
 }
 
 nav.filter {
